--- a/about.html
+++ b/about.html
@@ -108,6 +108,22 @@
                             <a href="#" class="dropdown-item">Cyber Threat Intelligence</a>
                         </div>
                     </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">
+                            Web Development with Node.js and React <span class="badge badge-success ml-2">New</span> <i class="fa fa-angle-down float-right mt-1"></i>
+                        </a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Introduction to Node.js</a>
+                            <a href="#" class="dropdown-item">Express.js Fundamentals</a>
+                            <a href="#" class="dropdown-item">Building RESTful APIs</a>
+                            <a href="#" class="dropdown-item">React Basics</a>
+                            <a href="#" class="dropdown-item">State Management with React Hooks</a>
+                            <a href="#" class="dropdown-item">Creating Reusable Components</a>
+                            <a href="#" class="dropdown-item">Full-Stack Application Development</a>
+                            <a href="#" class="dropdown-item">Project Work</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </nav>
         </div>
