--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
                                 <a href="#" class="dropdown-item">Risk Management</a>
                             </div>
                         </div>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link" data-toggle="dropdown">
+                                Web Development with Node.js and React <span class="badge badge-success ml-2">New</span> <i class="fa fa-angle-down float-right mt-1"></i>
+                            </a>
+                            <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                                <a href="#" class="dropdown-item">Introduction to Node.js</a>
+                                <a href="#" class="dropdown-item">Express.js Fundamentals</a>
+                                <a href="#" class="dropdown-item">Building RESTful APIs</a>
+                                <a href="#" class="dropdown-item">React Basics</a>
+                                <a href="#" class="dropdown-item">State Management with React Hooks</a>
+                                <a href="#" class="dropdown-item">Creating Reusable Components</a>
+                                <a href="#" class="dropdown-item">Full-Stack Application Development</a>
+                                <a href="#" class="dropdown-item">Project Work</a>
+                            </div>
+                        </div>
+                        
                     </div>
                 </nav>
             </div>
@@ -183,7 +199,7 @@
                         <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">About Us</h5>
                         <h1>Innovative Way To Learn</h1>
                     </div>
-                    <p>At SkillForges eLearning, we provide an unparalleled learning experience designed for the modern professional. Our platform offers a fully remote, hands-on approach to education, enabling you to engage with practical exercises and real-world scenarios from the comfort of your own space. With flexible scheduling tailored to fit your lifestyle, you can balance learning with your personal and professional commitments. Whether you're looking to enhance your skills or explore new fields, SkillForge ensures a comprehensive and interactive learning journey that adapts to your pace and needs. Empower yourself with cutting-edge knowledge and practical experience, and take your career to new heights with SkillForge eLearning.</p>
+                    <p>At SkillForge eLearning, we provide an unparalleled learning experience designed for the modern professional. Our platform offers a fully remote, hands-on approach to education, enabling you to engage with practical exercises and real-world scenarios from the comfort of your own space. With flexible scheduling tailored to fit your lifestyle, you can balance learning with your personal and professional commitments. Whether you're looking to enhance your skills or explore new fields, SkillForge ensures a comprehensive and interactive learning journey that adapts to your pace and needs. Empower yourself with cutting-edge knowledge and practical experience, and take your career to new heights with SkillForge eLearning.</p>
                     <a href="register.html" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a>
                 </div>
             </div>
