--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
+
                         </div>
                         <a class="btn btn-primary py-2 px-4 ml-auto" href="register.html">Join Now</a>
                     </div>
@@ -250,6 +252,14 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="rounded overflow-hidden mb-2">
+                    <img class="img-fluid" src="img/skll2.PNG" alt="">
+                    <div class="bg-secondary p-4">
+                        <h5> Web Development with Node.js and React</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="rounded overflow-hidden mb-2">
                     <img class="img-fluid" src="img/course-5.jpg" alt="">
                     <div class="bg-secondary p-4">
                         <h5>Ethical Hacking Foundations</h5>
@@ -296,6 +306,23 @@
                                     <a href="#" class="dropdown-item">Object-Oriented Programming (OOP)</a>
                                 </div>
                             </div>
+
+
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link" data-toggle="dropdown">
+                                    Web Development with Node.js and React <span class="badge badge-success ml-2">New</span> <i class="fa fa-angle-down float-right mt-1"></i>
+                                </a>
+                                <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                                    <a href="#" class="dropdown-item">Introduction to Node.js</a>
+                                    <a href="#" class="dropdown-item">Express.js Fundamentals</a>
+                                    <a href="#" class="dropdown-item">Building RESTful APIs</a>
+                                    <a href="#" class="dropdown-item">React Basics</a>
+                                    <a href="#" class="dropdown-item">State Management with React Hooks</a>
+                                    <a href="#" class="dropdown-item">Creating Reusable Components</a>
+                                    <a href="#" class="dropdown-item">Full-Stack Application Development</a>
+                                    <a href="#" class="dropdown-item">Project Work</a>
+                                </div>
+                            </div>
                     
                             <!-- Data Analysis with Python Dropdown -->
                             <div class="nav-item dropdown mt-3">
@@ -309,6 +336,7 @@
                                     <a href="#" class="dropdown-item">Statistical Analysis</a>
                                 </div>
                             </div>
+
                     
                             <!-- Cybersecurity Analyst Dropdown -->
                             <div class="nav-item dropdown mt-3">
