--- a/about.html
+++ b/about.html
@@ -139,6 +139,7 @@
                     <div class="navbar-nav py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
                         <div class="nav-item dropdown">
                             </div>
                         </div>
