--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                         <div class="navbar-nav py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
                         </div>
                         <a class="btn btn-primary py-2 px-4 ml-auto d-none d-lg-block" href="register.html">Join Now</a>
                     </div>
