--- a/register.html
+++ b/register.html
@@ -132,6 +132,7 @@
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
                         </div>
                         <a class="btn btn-primary py-2 px-4 ml-auto" href="register.html">Join Now</a>
                     </div>
