--- a/register.html
+++ b/register.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>SkillForge eLearning - Online Classes</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Learn from the comfort of your home" name="keywords">
+    <meta content="Learn from the comfort of your home" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
