--- a/register.html
+++ b/register.html
@@ -133,8 +133,6 @@
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                             <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
                         </div>
-                        <a class="btn btn-primary py-2 px-4 ml-auto" href="register.html">Join Now</a>
-                    </div>
                 </nav>
             </div>
         </div>
@@ -160,6 +158,12 @@
                         <label for="phone">Phone Number</label>
                         <input type="tel" class="form-control" id="phone" name="phone" required>
                     </div>
+
+                    <div class="form-group">
+                        <label for="phone">State of Residence</label>
+                        <input type="tel" class="form-control" id="phone" name="phone" required>
+                    </div>
+
                     <div class="form-group">
                         <label for="course">Preferred Course</label>
                         <select class="form-control" id="course" name="course" required>
@@ -170,6 +174,14 @@
                             <option value="Web Development with Node.js and React">Web Development with Node.js and React</option>
                         </select>
                     </div>
+
+                    <div class="form-group">
+                        <label>What is your level of Experience in the program you selected above?</label><br>
+                        <label><input type="radio" name="time_slot" value="4-6 PM">   Beginner</label>
+                        <label><input type="radio" name="time_slot" value="6-8 PM">   Intermediate</label>
+                        <label><input type="radio" name="time_slot" value="8-10 PM">  Expert but needs a Refresher course</label>
+                    </div>
+
                     <div class="form-group">
                         <label>Available Days</label><br>
                         <label><input type="checkbox" name="days" value="Monday"> Monday</label>
