--- a/register.html
+++ b/register.html
@@ -139,6 +139,7 @@
     </div>
     <!-- Navbar End -->
 
+
     <!-- Registration Form Start -->
     <div class="container py-5">
         <div class="row justify-content-center">
@@ -268,6 +269,10 @@
             });
         });
     </script>
+
+       <!-- jQuery and Bootstrap JS -->
+       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
