--- a/register.html
+++ b/register.html
@@ -161,9 +161,10 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="phone">State of Residence</label>
-                        <input type="tel" class="form-control" id="phone" name="phone" required>
+                        <label for="state">State of Residence</label>
+                        <input type="text" class="form-control" id="state" name="state" required>
                     </div>
+                    
 
                     <div class="form-group">
                         <label for="course">Preferred Course</label>
