--- a/register.html
+++ b/register.html
@@ -194,9 +194,9 @@
                     </div>
                     <div class="form-group">
                         <label>Preferred Time Slot</label><br>
-                        <label><input type="radio" name="time_slot" value="4-6 PM"> 4-6 PM</label>
-                        <label><input type="radio" name="time_slot" value="6-8 PM"> 6-8 PM</label>
-                        <label><input type="radio" name="time_slot" value="8-10 PM"> 8-10 PM</label>
+                        <label><input type="radio" name="experience_level" value="4-6 PM"> 4-6 PM</label>
+                        <label><input type="radio" name="experience_level" value="6-8 PM"> 6-8 PM</label>
+                        <label><input type="radio" name="experience_level" value="8-10 PM"> 8-10 PM</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
