--- a/about.html
+++ b/about.html
@@ -109,6 +109,21 @@
                         </div>
                     </div>
                     <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">Blockchain Technology <i class="fa fa-angle-down float-right mt-1"></i></a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Ethereum</a>
+                            <a href="#" class="dropdown-item">Solidity</a>
+                            <a href="#" class="dropdown-item">Hyperledger</a>
+                            <a href="#" class="dropdown-item">Smart Contracts</a>
+                            <a href="#" class="dropdown-item">Decentralized Finance (DeFi)</a>
+                            <a href="#" class="dropdown-item">Blockchain Security</a>
+                            <a href="#" class="dropdown-item">Consensus Mechanisms</a>
+                            <a href="#" class="dropdown-item">NFTs</a>
+                            <a href="#" class="dropdown-item">Cryptocurrency Wallets</a>
+                            <a href="#" class="dropdown-item">Blockchain Scalability</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
                         <a href="#" class="nav-link" data-toggle="dropdown">
                             Web Development with Node.js and React <span class="badge badge-success ml-2">New</span> <i class="fa fa-angle-down float-right mt-1"></i>
                         </a>
