--- a/register.html
+++ b/register.html
@@ -173,6 +173,7 @@
                             <option value="Python Programming">Python Programming</option>
                             <option value="Data Analysis">Data Analysis</option>
                             <option value="Cybersecurity Analyst">Cybersecurity Analyst</option>
+                            <option value="Blockchain Development with Solidity and Ethereum">Blockchain Technology</option>
                             <option value="Web Development with Node.js and React">Web Development with Node.js and React</option>
                         </select>
                     </div>
