--- a/index.html
+++ b/index.html
@@ -58,90 +58,103 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid">
-        <div class="row border-top px-xl-5">
-            <div class="col-lg-3 d-none d-lg-block">
-                <a class="d-flex align-items-center justify-content-between bg-secondary w-100 text-decoration-none" data-toggle="collapse" href="#navbar-vertical" style="height: 67px; padding: 0 30px;">
-                    <h5 class="text-primary m-0"><i class="fa fa-cogs mr-2"></i>Programs Offered</h5>
-                    <i class="fa fa-angle-down text-primary"></i>
+<div class="container-fluid">
+    <div class="row border-top px-xl-5">
+        <div class="col-lg-3 d-none d-lg-block">
+            <a class="d-flex align-items-center justify-content-between bg-secondary w-100 text-decoration-none" data-toggle="collapse" href="#navbar-vertical" style="height: 67px; padding: 0 30px;">
+                <h5 class="text-primary m-0"><i class="fa fa-cogs mr-2"></i>Programs Offered</h5>
+                <i class="fa fa-angle-down text-primary"></i>
+            </a>
+            <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 9;">
+                <div class="navbar-nav w-100">
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">Python Programming <i class="fa fa-angle-down float-right mt-1"></i></a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Flask</a>
+                            <a href="#" class="dropdown-item">Django</a>
+                            <a href="#" class="dropdown-item">Data Analysis with Python</a>
+                            <a href="#" class="dropdown-item">Machine Learning with Python</a>
+                            <a href="#" class="dropdown-item">Web Scraping with Python</a>
+                            <a href="#" class="dropdown-item">Object-Oriented Programming (OOP)</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">Data Analysis <i class="fa fa-angle-down float-right mt-1"></i></a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Pandas</a>
+                            <a href="#" class="dropdown-item">NumPy</a>
+                            <a href="#" class="dropdown-item">Matplotlib</a>
+                            <a href="#" class="dropdown-item">Seaborn</a>
+                            <a href="#" class="dropdown-item">Power BI</a>
+                            <a href="#" class="dropdown-item">Statistical Analysis</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">Cybersecurity Analyst <i class="fa fa-angle-down float-right mt-1"></i></a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Network Security</a>
+                            <a href="#" class="dropdown-item">Threat Detection</a>
+                            <a href="#" class="dropdown-item">Ethical Hacking</a>
+                            <a href="#" class="dropdown-item">Incident Response</a>
+                            <a href="#" class="dropdown-item">Penetration Testing</a>
+                            <a href="#" class="dropdown-item">Risk Management</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">Blockchain Technology <i class="fa fa-angle-down float-right mt-1"></i></a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Ethereum</a>
+                            <a href="#" class="dropdown-item">Solidity</a>
+                            <a href="#" class="dropdown-item">Hyperledger</a>
+                            <a href="#" class="dropdown-item">Smart Contracts</a>
+                            <a href="#" class="dropdown-item">Decentralized Finance (DeFi)</a>
+                            <a href="#" class="dropdown-item">Blockchain Security</a>
+                            <a href="#" class="dropdown-item">Consensus Mechanisms</a>
+                            <a href="#" class="dropdown-item">NFTs</a>
+                            <a href="#" class="dropdown-item">Cryptocurrency Wallets</a>
+                            <a href="#" class="dropdown-item">Blockchain Scalability</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link" data-toggle="dropdown">
+                            Web Development with Node.js and React <span class="badge badge-success ml-2">New</span> <i class="fa fa-angle-down float-right mt-1"></i>
+                        </a>
+                        <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                            <a href="#" class="dropdown-item">Introduction to Node.js</a>
+                            <a href="#" class="dropdown-item">Express.js Fundamentals</a>
+                            <a href="#" class="dropdown-item">Building RESTful APIs</a>
+                            <a href="#" class="dropdown-item">React Basics</a>
+                            <a href="#" class="dropdown-item">State Management with React Hooks</a>
+                            <a href="#" class="dropdown-item">Creating Reusable Components</a>
+                            <a href="#" class="dropdown-item">Full-Stack Application Development</a>
+                            <a href="#" class="dropdown-item">Project Work</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="col-lg-9">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+                <a href="" class="text-decoration-none d-block d-lg-none">
+                    <h1 class="m-0"><span class="text-primary">SkillForge</span> eLearning</h1>
                 </a>
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 9;">
-                    <div class="navbar-nav w-100">
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Python Programming <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
-                                <a href="#" class="dropdown-item">Flask</a>
-                                <a href="#" class="dropdown-item">Django</a>
-                                <a href="#" class="dropdown-item">Data Analysis with Python</a>
-                                <a href="#" class="dropdown-item">Machine Learning with Python</a>
-                                <a href="#" class="dropdown-item">Web Scraping with Python</a>
-                                <a href="#" class="dropdown-item">Object-Oriented Programming (OOP)</a>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Data Analysis <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
-                                <a href="#" class="dropdown-item">Pandas</a>
-                                <a href="#" class="dropdown-item">NumPy</a>
-                                <a href="#" class="dropdown-item">Matplotlib</a>
-                                <a href="#" class="dropdown-item">Seaborn</a>
-                                <a href="#" class="dropdown-item">Power BI</a>
-                                <a href="#" class="dropdown-item">Statistical Analysis</a>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Cybersecurity Analyst <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
-                                <a href="#" class="dropdown-item">Network Security</a>
-                                <a href="#" class="dropdown-item">Threat Detection</a>
-                                <a href="#" class="dropdown-item">Ethical Hacking</a>
-                                <a href="#" class="dropdown-item">Incident Response</a>
-                                <a href="#" class="dropdown-item">Penetration Testing</a>
-                                <a href="#" class="dropdown-item">Risk Management</a>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">
-                                Web Development with Node.js and React <span class="badge badge-success ml-2">New</span> <i class="fa fa-angle-down float-right mt-1"></i>
-                            </a>
-                            <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
-                                <a href="#" class="dropdown-item">Introduction to Node.js</a>
-                                <a href="#" class="dropdown-item">Express.js Fundamentals</a>
-                                <a href="#" class="dropdown-item">Building RESTful APIs</a>
-                                <a href="#" class="dropdown-item">React Basics</a>
-                                <a href="#" class="dropdown-item">State Management with React Hooks</a>
-                                <a href="#" class="dropdown-item">Creating Reusable Components</a>
-                                <a href="#" class="dropdown-item">Full-Stack Application Development</a>
-                                <a href="#" class="dropdown-item">Project Work</a>
-                            </div>
-                        </div>
-                        
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                    <div class="navbar-nav py-0">
+                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
                     </div>
-                </nav>
-            </div>
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
-                    <a href="" class="text-decoration-none d-block d-lg-none">
-                        <h1 class="m-0"><span class="text-primary">SkillForge</span> eLearning</h1>
-                    </a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                            <a href="courses.html" class="nav-item nav-link">Explore our Courses</a>
-
-                        </div>
-                        <a class="btn btn-primary py-2 px-4 ml-auto" href="register.html">Join Now</a>
-                    </div>
-                </nav>
-            </div>
+                    <a class="btn btn-primary py-2 px-4 ml-auto" href="register.html">Join Now</a>
+                </div>
+            </nav>
         </div>
     </div>
-    <!-- Navbar End -->
+</div>
+<!-- Navbar End -->
 
 
 
@@ -334,6 +347,22 @@
                                     <a href="#" class="dropdown-item">Seaborn</a>
                                     <a href="#" class="dropdown-item">Power BI</a>
                                     <a href="#" class="dropdown-item">Statistical Analysis</a>
+                                </div>
+                            </div>
+
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link" data-toggle="dropdown">Blockchain Technology <i class="fa fa-angle-down float-right mt-1"></i></a>
+                                <div class="dropdown-menu position-absolute bg-light border-0 rounded-0 w-100 m-0">
+                                    <a href="#" class="dropdown-item">Ethereum</a>
+                                    <a href="#" class="dropdown-item">Solidity</a>
+                                    <a href="#" class="dropdown-item">Hyperledger</a>
+                                    <a href="#" class="dropdown-item">Smart Contracts</a>
+                                    <a href="#" class="dropdown-item">Decentralized Finance (DeFi)</a>
+                                    <a href="#" class="dropdown-item">Blockchain Security</a>
+                                    <a href="#" class="dropdown-item">Consensus Mechanisms</a>
+                                    <a href="#" class="dropdown-item">NFTs</a>
+                                    <a href="#" class="dropdown-item">Cryptocurrency Wallets</a>
+                                    <a href="#" class="dropdown-item">Blockchain Scalability</a>
                                 </div>
                             </div>
 
