--- a/register.html
+++ b/register.html
@@ -180,9 +180,9 @@
 
                     <div class="form-group">
                         <label>What is your level of Experience in the program you selected above?</label><br>
-                        <label><input type="radio" name="time_slot" value="4-6 PM">   Beginner</label>
-                        <label><input type="radio" name="time_slot" value="6-8 PM">   Intermediate</label>
-                        <label><input type="radio" name="time_slot" value="8-10 PM">  Expert but needs a Refresher course</label>
+                        <label><input type="radio" name="experience_level" value="Beginner">Beginner</label>
+                        <label><input type="radio" name="experience_level" value="6-8 PM"> Intermediate</label>
+                        <label><input type="radio" name="experience_level" value="8-10 PM">Expert but needs a Refresher course</label>
                     </div>
 
                     <div class="form-group">
@@ -195,9 +195,9 @@
                     </div>
                     <div class="form-group">
                         <label>Preferred Time Slot</label><br>
-                        <label><input type="radio" name="experience_level" value="4-6 PM"> 4-6 PM</label>
-                        <label><input type="radio" name="experience_level" value="6-8 PM"> 6-8 PM</label>
-                        <label><input type="radio" name="experience_level" value="8-10 PM"> 8-10 PM</label>
+                        <label><input type="radio" name="time_slot" value="4-6 PM"> 4-6 PM</label>
+                        <label><input type="radio" name="time_slot" value="6-8 PM"> 6-8 PM</label>
+                        <label><input type="radio" name="time_slot" value="8-10 PM"> 8-10 PM</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
